--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 landing_links:
   - name: Resume
-    link: "#"
+    link: "/assets/resume.pdf"
   - name: Projects
     link: "#portfolio"
   - name: Experience
